--- a/nailease/about.html
+++ b/nailease/about.html
@@ -41,13 +41,8 @@
                 
                 <nav class="flex space-x-4 items-center">
                     <a href="homepage.html" class="text-gray-600 hover:text-pink-600 transition duration-150 font-medium">Home</a>
-<<<<<<< HEAD
-                    <a href="#" class="text-gray-600 hover:text-pink-600 transition duration-150 font-medium">Design Portfolio</a>
-                    <a href="book.html" class="text-gray-600 hover:text-pink-600 transition duration-150 font-medium">Book</a>
-=======
                     <a href="design_portfolio.html" class="text-gray-600 hover:text-pink-600 transition duration-150 font-medium">Design Portfolio</a>
-                    <a href="#" class="text-gray-600 hover:text-pink-600 transition duration-150 font-medium">Book</a>
->>>>>>> b06effa (Design Portfolio)
+                    <a href="book.html" class="text-gray-600 hover:text-pink-600 transition duration-150 font-medium">Book</a>
                     <a href="about.html" class="text-gray-600 hover:text-pink-600 transition duration-150 font-medium">About us</a>
                     <button id="accountLinkBtn" class="flex items-center text-pink-600 hover:text-pink-700 transition duration-150 p-2 rounded-full hover:bg-pink-50">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
@@ -94,20 +89,20 @@
                 <!-- Contact Info -->
                 <div class="mb-6">
                     <p class="text-gray-700 font-semibold mb-2">Email Inquiries:</p>
-                    <a href="mailto:your.durnailsbydes@gmail.com" class="text-pink-500 hover:text-pink-700 text-lg font-medium transition-colors">
+                    <a href="mailto:durnailsbydes@gmail.com" class="text-pink-500 hover:text-pink-700 text-lg font-medium transition-colors">
                         durnailsbydes@gmail.com
                     </a>
                 </div>
 
                 <!-- Social Links -->
                 <div class="flex justify-center space-x-6">
-                    <a href="https://www.facebook.com/profile.php?id=61555792547656" target="_blank" class="social-link text-gray-500">
+                    <a href="https://www.facebook.com/profile.php?id=61555792547656" target="_blank" rel="noopener noreferrer" class="social-link text-gray-500">
                         <i class="fab fa-facebook-f fa-2x"></i>
                     </a>
-                    <a href="https://www.instagram.com/durlashnailsbydes/" target="_blank" class="social-link text-gray-500">
+                    <a href="https://www.instagram.com/durlashnailsbydes/" target="_blank" rel="noopener noreferrer" class="social-link text-gray-500">
                         <i class="fab fa-instagram fa-2x"></i>
                     </a>
-                    <a href="https://www.tiktok.com/@dur.lashnails.bydes" target="_blank" class="social-link text-gray-500">
+                    <a href="https://www.tiktok.com/@dur.lashnails.bydes" target="_blank" rel="noopener noreferrer" class="social-link text-gray-500">
                         <i class="fab fa-tiktok fa-2x"></i>
                     </a>
                 </div>
@@ -118,9 +113,36 @@
                 <p class="text-sm text-gray-500 text-center mb-4">
                     Sampaguita Lipa City Purok 3, Lipa City, Philippines. Please book an appointment before visiting.
                 </p>
-                   <iframe style="margin-left: 65px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233.85312289452153!2d121.14300884306432!3d13.913348693212244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd13ca9a8514f9%3A0x813c703634d181f!2sD%E2%80%99urLashNailsbydes!5e1!3m2!1sen!2sph!4v1762086409393!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+                <div class="flex justify-center">
+                    <iframe 
+                        class="w-full max-w-2xl rounded-lg shadow-lg" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233.85312289452153!2d121.14300884306432!3d13.913348693212244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd13ca9a8514f9%3A0x813c703634d181f!2sD%E2%80%99urLashNailsbydes!5e1!3m2!1sen!2sph!4v1762086409393!5m2!1sen!2sph" 
+                        width="600" 
+                        height="450" 
+                        style="border:0;" 
+                        allowfullscreen 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade" 
+                        title="DCAC NailEase Location Map"
+                        aria-label="Google Maps showing DCAC NailEase location">
+                    </iframe>
+                </div>
             </section>
         </div>
     </main>
+    </div>
+
+    <script>
+        // Handle account button click
+        document.addEventListener('DOMContentLoaded', () => {
+            const accountBtn = document.getElementById('accountLinkBtn');
+            if (accountBtn) {
+                accountBtn.addEventListener('click', (e) => {
+                    e.preventDefault();
+                    window.location.href = 'index.html';
+                });
+            }
+        });
+    </script>
 </body>
 </html>
