--- a/nailease/index.html
+++ b/nailease/index.html
@@ -40,6 +40,14 @@
         </div>
 
         <div id="app-content" class="hidden">
+            <!-- Added Appointment History section with Book Now button -->
+            <div class="bg-white p-8 md:p-10 rounded-xl shadow-2xl w-full max-w-sm mx-auto text-center mt-8">
+                <h2 class="text-2xl font-bold text-gray-800 mb-4">Appointment History</h2>
+                <button onclick="window.location.href='book.html'" 
+                        class="w-full px-4 py-3 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-600 transition duration-150 ease-in-out focus:outline-none focus:ring-4 focus:ring-blue-300">
+                    Book Now
+                </button>
+            </div>
         </div>
     </div>
 
