--- a/nailease/index.html
+++ b/nailease/index.html
@@ -46,6 +46,7 @@
     <script>
         window.__NAILEASE_CALENDAR_EMBED_URL__ = 'https://calendar.google.com/calendar/embed?src=naileaseph%40gmail.com&ctz=Asia%2FManila';
     </script>
+    <script src="./google-calendar.js"></script>
     <script type="module" src="./auth-logic.js"></script>
     <script type="module">
         import { startAuthFlow } from './auth-logic.js';
