--- a/nailease/about.html
+++ b/nailease/about.html
@@ -8,9 +8,20 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+        }
         body {
             font-family: 'Inter', sans-serif;
             background-color: #fcf4f8; 
+        }
+        #public-root {
+            width: 100vw;
+            max-width: 100vw;
+            margin-left: calc(50% - 50vw);
+            margin-right: calc(50% - 50vw);
         }
         .social-link {
             transition: transform 0.2s, color 0.2s;
@@ -35,9 +46,18 @@
 </head>
 <body>
     <!-- Navigation Header -->
-    <div class="min-h-screen bg-pink-50/50">
+    <style>
+        #public-root {
+            width: 100vw;
+            max-width: 100vw;
+            margin-left: calc(50% - 50vw);
+            margin-right: calc(50% - 50vw);
+        }
+        html, body { margin: 0; padding: 0; overflow-x: hidden; }
+    </style>
+    <div id="public-root" class="min-h-screen bg-pink-50/50">
         <header class="sticky top-0 bg-white shadow-lg z-50">
-            <div class="w-full px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center max-w-7xl mx-auto">
+            <div class="w-full px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center max-w-none mx-0">
                 <a href="home.html" class="shadow-sm hover:shadow-md transition">
                     <img src="logo.png" alt="D'UR LASHNAILS BY DES" class="h-16 shadow-sm">
                 </a>
@@ -136,6 +156,10 @@
         </div>
     </main>
 
+    <footer class="text-center py-6 text-gray-500 text-sm border-t border-pink-100 mt-12">
+        &copy; 2024 D'UR LASHNAILS BY DES. All rights reserved.
+    </footer>
+
     <script>
         const accountBtn = document.getElementById('accountLinkBtn');
 
@@ -148,6 +172,7 @@
             console.error("Account button (#accountLinkBtn) not found!"); 
         }
     </script>
+    </div>
 </body>
 
 </html>
