--- a/nailease/book.html
+++ b/nailease/book.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCAC NailEase - Book Your Design</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
         import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
@@ -510,18 +512,18 @@
                 <h2 class="text-2xl font-bold text-pink-600 text-center mb-6">Payment & Confirmation</h2>
                 
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
-                    <div class="payment-method border-2 border-pink-500 rounded-2xl p-6 text-center cursor-pointer transition-all bg-pink-50" data-method="gcash">
-                        <div class="text-2xl font-bold text-pink-600 mb-3">GC</div>
+                    <div class="payment-method border-2 border-gray-300 rounded-2xl p-6 text-center cursor-pointer transition-all bg-white hover:border-pink-500 hover:bg-pink-50 hover:text-pink-600" data-method="gcash">
+                        <div class="text-2xl font-bold text-gray-600 mb-3 transition-all hover:text-pink-600">GC</div>
                         <h4 class="font-bold text-lg mb-1">GCash</h4>
                         <p class="text-gray-600 text-sm">Mobile Payment</p>
                     </div>
-                    <div class="payment-method border-2 border-gray-300 rounded-2xl p-6 text-center cursor-pointer transition-all hover:border-pink-500" data-method="maya">
-                        <div class="text-2xl font-bold text-gray-600 mb-3">MY</div>
+                    <div class="payment-method border-2 border-gray-300 rounded-2xl p-6 text-center cursor-pointer transition-all bg-white hover:border-pink-500 hover:bg-pink-50 hover:text-pink-600" data-method="maya">
+                        <div class="text-2xl font-bold text-gray-600 mb-3 transition-all hover:text-pink-600">MY</div>
                         <h4 class="font-bold text-lg mb-1">Maya (PayMaya)</h4>
                         <p class="text-gray-600 text-sm">Digital Wallet</p>
                     </div>
-                    <div class="payment-method border-2 border-gray-300 rounded-2xl p-6 text-center cursor-pointer transition-all hover:border-pink-500" data-method="bank">
-                        <div class="text-2xl font-bold text-gray-600 mb-3">BT</div>
+                    <div class="payment-method border-2 border-gray-300 rounded-2xl p-6 text-center cursor-pointer transition-all bg-white hover:border-pink-500 hover:bg-pink-50 hover:text-pink-600" data-method="bank">
+                        <div class="text-2xl font-bold text-gray-600 mb-3 transition-all hover:text-pink-600">BT</div>
                         <h4 class="font-bold text-lg mb-1">Bank Transfer</h4>
                         <p class="text-gray-600 text-sm">Direct Transfer</p>
                     </div>
